--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.username=root
 spring.datasource.password=
 
 # Logging
-logging.level.org.springframework=DEBUG
-logging.level.com.howtodoinjava=DEBUG
+logging.level.org.springframework=INFO
+logging.level.com.howtodoinjava=INFO
 
 #output to a temp_folder/file
 logging.file.path=logs
