--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port= 8005
 
-
 # MySQL
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
@@ -9,6 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3308/amici-calcio-db
 spring.datasource.username=root
 spring.datasource.password=
+
+
+spring.devtools.restart.log-condition-evaluation-delta=false
 
 # Logging
 logging.level.org.springframework=INFO
