--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.password=
 
 spring.devtools.restart.log-condition-evaluation-delta=false
 
+## for swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.howtodoinjava=INFO
