--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.datasource.password=
 
 spring.devtools.restart.log-condition-evaluation-delta=false
 
+# for file upload
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
+
+
 ## for swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
@@ -18,7 +23,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 logging.level.org.springframework=INFO
 logging.level.com.howtodoinjava=INFO
 
-#output to a temp_folder/file
+# logging output to a temp_folder/file
 logging.file.path=logs
 logging.file.name=log.txt
 
