--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,11 @@ logging.file.name=log.txt
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
 
 
+# Config mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kvanconingsloo@gmail.com
+spring.mail.password=gqbsghfahyagdijc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
